Edição TODO
Adicionado variavel responsible e alterado list dos TODOS